Fixs on link on trash can page, cap labels on update, and table spacing on list notes

--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -33,3 +33,8 @@ textarea#note_markdown {
   width: 500px;
   height: 150px;
 }
+
+.titleTable{
+    padding-right: 25px;
+    padding-left: 25px;
+}
